--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             />
           </label>
             <button type="submit" class="btn">
-            Get Password
+           Reset Password
           </button>
         </form>
     </div>
